# PIC_Layout_DRC

./: .gitignore  LICENSE  README.md  Tutorial_online.py  drc.py  example.py  klayout_2p5DViews.py  klayout_Connectivity.py  klayout_DRCCheck.py  klayout_GenerateLayerProperties.py  klayout_LoadLayerProperties.py  klayout_PIC_example.py  klayout_ShowDRCResults.py  klayout_drc.py  klayout_opengds.py  klayout_simple_MZI.py  klayout_utils.py  nazaca_example.py  nazca_example.py  nazca_online_tutorial.py  py_klayout_example.py  pyproject.toml
drc_outputs/: klayout_PIC_example_pic_freeform.lyrdb  klayout_PIC_example_pic_freeform_layers.gds  py_klayout_example_drc.lyrdb  py_klayout_example_drc_layers.gds
drc_rules/: pic_drc.drc  pic_drc_errorGen.drc  pic_freeform.drc
layout_gds/: GDSFactory_PIC_example.gds  barcode.gds  coupler.gds  klayout_PIC_example.gds  layers_example.gds  letter_O.gds  mzi_full.gds  nazca_1stAssignment.gds  nazca_1stAssignment2.gds  nazca_2ndAssignment.gds  nazca_3rdAssignment.gds  number_3.gds  p2p.gds  py_klayout_example.gds  qr_code.gds  symbol_plus.gds
layout_lyp/: pic_process.lyp
