[project]
name = "PIC"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "nazca",
  "Pillow>=9.4.0",
  "PyYAML>=5.1",
  "ipython>=7.20.0,<8.0.0",
  "matplotlib>=3.8.4",
  "numpy>=1.26.0",
  "pandas>=2.2.2,<3.0.0",
  "pyclipper>=1.3.0",
  "scipy>=1.13.0",
  "klayout>=0.30.7",
  "gdsfactory>=9.40.1",
]

[tool.setuptools]
packages = []

[tool.uv.sources]
nazca = { path = "vendor/nazca" }
